2000-09-28  Masatake YAMATO  <yamato@redhat.com>

	* main.c: Added tag file format support.

	* Makefile.am (autotrace_SOURCES): Split the file set
	into autotrace_SOURCES, input_magick_src and output_src.
	(input_src): Added input-tga.[hc].

	* input-bmp.[hc]: Replace old files with new files sent
	from Martin.

	* input-tga.[hc]: New file from Martin.
 	(ReadImage): Initialize pels with 0 instead of NULL.
	Initialize image.bitmap after local variable declarations.

2000-09-26  Masatake YAMATO  <yamato@redhat.com>

	* output-eps.c: Applied a revised patch from
	Bernhard Herzog <herzog@online.de>.

	  Message-ID: <m3itro7146.fsf@greebo.nodomain.de>
	  Subject: Re: [AutoTrace] autotrace 0.23
	  From: Bernhard Herzog <herzog@online.de>
	  To: autotrace@egroups.com
	  Date: 22 Sep 2000 20:06:17 +0200


	* main.c: Applied a patch from <Johannes.Schindelin@gmx.de> 
	for Magick input support. See blocks surrounded by HAVE_MAGICK.
	(SUFFIX_LIST): New macro definition.

 	* input-magick.[ch]: Magick input plug donated by 
	<Johannes.Schindelin@gmx.de>.
	
	* configure.in(MAGICK_CONFIG): Check Magick-config.

	* Makefile.am(HAVE_MAGICK): New condition.

	* output-eps.c: Applied a patch from 
	Bernhard Herzog <herzog@online.de>.
		
          Message-ID: <m3og1g7brh.fsf@greebo.nodomain.de>
	  Subject: Re: [AutoTrace] autotrace 0.23
	  From: Bernhard Herzog <herzog@online.de>
	  To: autotrace@egroups.com
	  Date: 22 Sep 2000 16:16:18 +0200

	* fit.c: Include both limits.h and float.h.
	(fit_with_least_squares): Use %lx instead of %x.
	Cast left_curve to unsigned long.
	(fit_with_least_squares): Likewise.

	* curve.c (log_curve): Likewise.
	(log_entire_curve): Likewise.

 	* xmem.h (XREALLOC): Likewise.
		
	* .cvsignore: Added .deps, autotrace, config.cache, config.log,
	config.status and Makefile.
	

	* Makefile.am (AUTOMAKE_OPTIONS): Added AUTOMAKE_OPTIONS.
